src/np222kk/dv507/a2/test/cases/negative/test_neg_arrays_03.ofp
# test_neg_arrays

void main() {
    int[] i = {1,2.0,'c'};
}